src/test/ui/issues/issue-39559-2.stderr
error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-39559-2.rs:14:24
   |
LL |     let array: [usize; Dim3::dim()]
   |                        ^^^^^^^^^^^

error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-39559-2.rs:16:15
   |
LL |         = [0; Dim3::dim()];
   |               ^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
